--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -1172,6 +1172,9 @@ h4, .h4 {
   scroll-snap-type: x mandatory;
   overflow-x: scroll;
 }
+.reviews__slider-list::-webkit-scrollbar {
+  width: 0;
+}
 @media (min-width: 1024px) {
   .reviews__slider-list {
     margin-left: calc(var(--reviewsSliderSlideWidth) / 2 * -1);
