--- a/styles/blocks/_reviews.scss
+++ b/styles/blocks/_reviews.scss
@@ -21,8 +21,10 @@
 		&-list{ 
 			
 			&::-webkit-scrollbar {
-				width: 0;
+				display: none;
 			}
+			-ms-overflow-style: none;  /* IE и Edge */
+  		scrollbar-width: none;  /* Firefox */
 
 			display: flex;
 			column-gap: 60px;
