--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -1167,13 +1167,15 @@ h4, .h4 {
   --reviewsSliderSlideWidth: 606px;
 }
 .reviews__slider-list {
+  -ms-overflow-style: none; /* IE и Edge */
+  scrollbar-width: none; /* Firefox */
   display: flex;
   column-gap: 60px;
   scroll-snap-type: x mandatory;
   overflow-x: scroll;
 }
 .reviews__slider-list::-webkit-scrollbar {
-  width: 0;
+  display: none;
 }
 @media (min-width: 1024px) {
   .reviews__slider-list {
