--- a/styles/blocks/_footer.scss
+++ b/styles/blocks/_footer.scss
@@ -1,9 +1,25 @@
 .footer {
+
+	@include mobile {
+		padding-inline: 0;
+	}
+
 	&__inner {
 		padding: 55px 60px 50px;
 		color: var(--color-light);
-		border-radius: var(--border-radius-large) var(--border-radius-large) 0 0;
 		background-color: var(--color-dark);
+		
+		@include mobile-above {
+			border-radius: var(--border-radius-large) var(--border-radius-large) 0 0;
+		}
+
+		@include mobile {
+			padding: 50px var(--container-padding-x) 30px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			row-gap: 37px;
+		}
 	}
 
 	&__navigation {
@@ -15,6 +31,16 @@
 		&:not(:last-child) {
 			margin-bottom: 66px;
 		}
+
+		@include tablet {
+			flex-direction: column;
+			// align-items: center;
+			row-gap: 37px;
+		}
+
+		@include mobile {
+			display: contents;
+		}
 	}
 
 	&__menu {
@@ -22,6 +48,11 @@
 			display: flex;
 			align-items: center;
 			column-gap: 40px;
+
+			@include mobile {
+				flex-direction: column;
+				row-gap: 15px;
+			}
 		}
 
 		&-link {
@@ -36,15 +67,33 @@
 		}
 	}
 
+	&__soc1als {
+		@include mobile {
+			order: 1;
+		}
+	}
+
 	&__body {
 		display: flex;
 		justify-content: space-between;
 		column-gap: 50px;
 
-		&:not(:last-child) {
-			margin-bottom: 50px;
-			padding-bottom: 50px;
-			border-bottom: 1px solid currentColor;
+		@include mobile-above {
+			&:not(:last-child) {
+				margin-bottom: 50px;
+				padding-bottom: 50px;
+				border-bottom: 1px solid currentColor;
+			}
+		}
+
+		@include mobile {
+			flex-direction: column;
+			align-items: center;
+			row-gap: inherit;
+		}
+
+		@include mobile-s {
+			width: 100%;
 		}
 	}
 
@@ -53,6 +102,12 @@
 		flex-direction: column;
 		align-items: start;
 		row-gap: 27px;
+
+		@include mobile {
+			align-items: center;
+			text-align: center;
+		}
+
 
 		&-title {
 			color: var(--color-dark);
@@ -77,6 +132,16 @@
 	&__extra {
 		display: flex;
 		column-gap: 40px;
+
+		@include mobile {
+			flex-direction: column;
+			align-items: center;
+			row-gap: 15px;
+			order: 2;
+			width: 100%;
+			padding-top: 37px;
+			border-top: 1px solid currentColor;
+		}
 	}
 
 	&__privacy-policy-link {
