--- a/styles/blocks/_subscribe-form.scss
+++ b/styles/blocks/_subscribe-form.scss
@@ -1,4 +1,13 @@
 .subscribe-form {
+	@include desktop {
+		flex-direction: column;
+		row-gap: 22px;
+		padding: 30px;
+		width: 100%;
+		max-width: 450px;
+	}
+
+
 	display: flex;
 	column-gap: 20px;
 	padding: 58px 40px;
